[package]
name = "recipes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.70"
thiserror = "1.0.40"
axum = { version = "0.6.17", features = ["query", "headers"] }
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.38"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
time = { version = "0.3.20", features = ["parsing"] }
futures = "0.3.28"
utoipa = { version = "3.3.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
ts-rs = { version = "6.2.1", features = ["format", "serde-compat"], default-features = false }
diesel = { version = "2.0.4", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"] }

diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
bb8 = "0.8.0"
bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel", rev = "89b76207bbca35082687c765074f402200fcc51f" }
